--- a/config/qiniu.yml
+++ b/config/qiniu.yml
@@ -1,11 +1,11 @@
 defaults: &defaults
-  access_key: 'Vh2eyVOvWPPA9Vxf7O2drllvQd6TVWYlMykVG1u-'
-  secret_key: 'S7ptNtBPUw_L7Yr8rNUv6eBcMi0fr0ge-lWqFXqk'
-  bucket_pictures: 'heba'
-  bucket_media: 'heba'
-  bucket_views720: 'heba'
-  bucket_wmall: 'heba'
-  domain: 'biaotu.net'
+  access_key: '1-UC1K4LYkMG9g3Z460sQ9SJDOtVudWFmqeHZL3P'
+  secret_key: 'AJXceZNjZaGyaUVQwWPZ1rkL70aHc0Zq9C8zFvj2'
+  bucket_pictures: 'zhishang'
+  bucket_media: 'zhishang'
+  bucket_views720: 'zhishang'
+  bucket_wmall: 'zhishang'
+  domain: 'zhishangtech.top'
 
 development:
   <<: *defaults
